move LDAP configuration into paramters.ini - makes LDAP configuration more easily configurable

--- a/app/config/parameters.ini.dist
+++ b/app/config/parameters.ini.dist
@@ -17,3 +17,9 @@
     locale            = en
 
     secret            = ThisTokenIsNotSoSecretChangeIt
+
+    ldap_host         = "127.0.0.1"
+    ldap_port         = 389
+    ldap_readuser     = "readuser"
+    ldap_readpass     = "readuser"
+    ldap_basedn       = "dc=company,dc=org"
