add proxy support for JIRA API client

--- a/app/config/parameters.ini.dist
+++ b/app/config/parameters.ini.dist
@@ -23,3 +23,5 @@
     ldap_readuser     = "readuser"
     ldap_readpass     = "readuser"
     ldap_basedn       = "dc=company,dc=org"
+
+    proxy_http        =
