add new LDAP configuration parameters:
- ldap_usernamefield
- ldap_usessl

--- a/app/config/parameters.ini.dist
+++ b/app/config/parameters.ini.dist
@@ -23,5 +23,7 @@
     ldap_readuser     = "readuser"
     ldap_readpass     = "readuser"
     ldap_basedn       = "dc=company,dc=org"
+    ldap_usernamefield = sAMAccountName
+    ldap_usessl       = false
 
     proxy_http        =
