upgrade to Symfony 2.8
Conflicts:
	.gitignore
	composer.lock
	src/Netresearch/TimeTrackerBundle/Controller/AdminController.php
	src/Netresearch/TimeTrackerBundle/Controller/BaseController.php
	src/Netresearch/TimeTrackerBundle/Controller/ControllingController.php
	src/Netresearch/TimeTrackerBundle/Controller/CrudController.php
	src/Netresearch/TimeTrackerBundle/Controller/DefaultController.php
	src/Netresearch/TimeTrackerBundle/Controller/InterpretationController.php
	src/Netresearch/TimeTrackerBundle/Controller/SettingsController.php
	src/Netresearch/TimeTrackerBundle/Controller/StatusController.php
	src/Netresearch/TimeTrackerBundle/Controller/UserController.php
	src/Netresearch/TimeTrackerBundle/Entity/Activity.php
	src/Netresearch/TimeTrackerBundle/Entity/Entry.php
	src/Netresearch/TimeTrackerBundle/Entity/Project.php
	vendor/autoload.php
	vendor/composer/autoload_classmap.php
	vendor/composer/autoload_files.php
	vendor/composer/autoload_namespaces.php
	vendor/composer/autoload_psr4.php
	vendor/composer/autoload_real.php
	vendor/composer/autoload_static.php
	vendor/composer/installed.json
	vendor/doctrine/common/.travis.yml
	vendor/doctrine/common/composer.json
	vendor/doctrine/common/lib/Doctrine/Common/ClassLoader.php
	vendor/doctrine/common/lib/Doctrine/Common/Persistence/AbstractManagerRegistry.php
	vendor/doctrine/common/lib/Doctrine/Common/Persistence/Event/LoadClassMetadataEventArgs.php
	vendor/doctrine/common/lib/Doctrine/Common/Persistence/Event/PreUpdateEventArgs.php
	vendor/doctrine/common/lib/Doctrine/Common/Persistence/Mapping/AbstractClassMetadataFactory.php
	vendor/doctrine/common/lib/Doctrine/Common/Persistence/Mapping/Driver/AnnotationDriver.php
	vendor/doctrine/common/lib/Doctrine/Common/Persistence/Mapping/Driver/DefaultFileLocator.php
	vendor/doctrine/common/lib/Doctrine/Common/Persistence/Mapping/Driver/MappingDriverChain.php
	vendor/doctrine/common/lib/Doctrine/Common/Persistence/Mapping/Driver/PHPDriver.php
	vendor/doctrine/common/lib/Doct

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -1,5 +1,5 @@
 imports:
-    - { resource: parameters.ini }
+    - { resource: parameters.yml }
     - { resource: security.yml }
 
 framework:
@@ -95,3 +95,5 @@ circle_rest_client:
       defaults:
         CURLOPT_HTTPHEADER:     [ 'Content-Type: application/json' ]
         CURLOPT_FOLLOWLOCATION: true
+        arguments: [@service_container]
+
