--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -37,13 +37,14 @@ security:
 
         oauh_area:
             anonymous: ~
-            pattern: ^/connectjira/
+            pattern: ^/connectjira
             oauth:
                 resource_owners:
                     jira: /connectjira/check
                 login_path:        /connectjira
                 use_forward:       false
                 failure_path:      /avoidjiraconnection
+                check_path:     /connectjira
 
                 oauth_user_provider:
                     service: oauth_jira_user_provider
