--- a/app/config/parameters.ini.dist
+++ b/app/config/parameters.ini.dist
@@ -26,4 +26,9 @@
     ldap_usernamefield = sAMAccountName
     ldap_usessl       = false
 
+    app_logo_url                = "bundles/netresearchtimetracker/images/logo.png"
+    app_monthly_overview_url    = "https://stats.timetracker.nr/?user="
+    app_title                   = "Netresearch TimeTracker"
+    app_header_url              = "https://www.netresearch.de/corpnav-intern/zeiterfassung/"
+
     proxy_http        =
