--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     "require": {
         "php": ">=5.3.3",
         "symfony/symfony": "2.1.13",
-        "doctrine/orm": ">=2.2.3,<2.5-dev",
+        "doctrine/orm": ">=2.2.3,<2.5",
         "doctrine/doctrine-bundle": "1.1.*",
         "doctrine/migrations": "~1.0@dev",
         "doctrine/doctrine-migrations-bundle": "^1.0",
