Install dependencies hwi/oauth-bundle 0.3.9 and ci/restclientbundle 2.0.1
Conflicts:
	composer.json
	composer.lock
	vendor/composer/autoload_namespaces.php
	vendor/composer/autoload_static.php
	vendor/composer/installed.json

--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,8 @@
         "jpastoor/jira-api-restclient": "2.0.*",
         "zendframework/zend-ldap": "*",
         "phpoffice/phpspreadsheet": "^1.4"
+        "hwi/oauth-bundle": "^0.3.0",
+        "ci/restclientbundle": "^2.0"
     },
     "scripts": {
         "post-install-cmd": [
