add configurable behavior if users should be created automatically on valid ldap auth

--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -15,13 +15,14 @@ parameters:
 
     secret:            ThisTokenIsNotSoSecretChangeIt
 
-    ldap_host:         "127.0.0.1"
-    ldap_port:         389
-    ldap_readuser:     "readuser"
-    ldap_readpass:     "readuser"
-    ldap_basedn:       "dc=company,dc=org"
+    ldap_host:          "127.0.0.1"
+    ldap_port:          389
+    ldap_readuser:      "readuser"
+    ldap_readpass:      "readuser"
+    ldap_basedn:        "dc=company,dc=org"
     ldap_usernamefield: uid
-    ldap_usessl: true
+    ldap_usessl:        true
+    ldap_create_user:   true
 
     app_logo_url:             "bundles/netresearchtimetracker/images/logo.png"
     app_monthly_overview_url: "https://stats.timetracker.nr/?user="
