--- a/src/Netresearch/TimeTrackerBundle/Resources/config/routing.yml
+++ b/src/Netresearch/TimeTrackerBundle/Resources/config/routing.yml
@@ -1,183 +1,183 @@
 _start:
-    pattern:  /
+    path:  /
     defaults: { _controller: NetresearchTimeTrackerBundle:Default:index }
 
 user_add:
-    pattern: /user/add
+    path: /user/add
     defaults: { _controller: NetresearchTimeTrackerBundle:User:add }
 
 time_summary:
-    pattern: /getTimeSummary
+    path: /getTimeSummary
     defaults: { _controller: NetresearchTimeTrackerBundle:Default:getTimeSummary }
 
 interpretation_activity:
-    pattern: /interpretation/activity
+    path: /interpretation/activity
     defaults: { _controller: NetresearchTimeTrackerBundle:Interpretation:groupByActivity }
-    
+
 interpretation_time:
-    pattern: /interpretation/time
+    path: /interpretation/time
     defaults: { _controller: NetresearchTimeTrackerBundle:Interpretation:groupByWorktime }
-    
+
 interpretation_customer:
-    pattern: /interpretation/customer
+    path: /interpretation/customer
     defaults: { _controller: NetresearchTimeTrackerBundle:Interpretation:groupByCustomer }
 
 interpretation_project:
-    pattern: /interpretation/project
+    path: /interpretation/project
     defaults: { _controller: NetresearchTimeTrackerBundle:Interpretation:groupByProject }
 
 interpretation_ticket:
-    pattern: /interpretation/ticket
+    path: /interpretation/ticket
     defaults: { _controller: NetresearchTimeTrackerBundle:Interpretation:groupByTicket }
 
 interpretation_user:
-    pattern: /interpretation/user
+    path: /interpretation/user
     defaults: { _controller: NetresearchTimeTrackerBundle:Interpretation:groupByUser }
 
 interpretation_entries:
-    pattern: /interpretation/entries
+    path: /interpretation/entries
     defaults: { _controller: NetresearchTimeTrackerBundle:Interpretation:getLastEntries }
 
 timetracking_save:
-    pattern: /tracking/save
+    path: /tracking/save
     defaults: { _controller: NetresearchTimeTrackerBundle:Crud:save }
 
 timetracking_delete:
-    pattern: /tracking/delete
+    path: /tracking/delete
     defaults: { _controller: NetresearchTimeTrackerBundle:Crud:delete }
 
 timetracking_bulkentry:
-    pattern: /tracking/bulkentry
+    path: /tracking/bulkentry
     defaults: { _controller: NetresearchTimeTrackerBundle:Crud:bulkentry }
 
 _getSummary:
-    pattern: /getSummary
+    path: /getSummary
     defaults: { _controller: NetresearchTimeTrackerBundle:Default:getSummary }
 
 _getData:
-    pattern:  /getData
+    path:  /getData
     defaults: { _controller: NetresearchTimeTrackerBundle:Default:getData }
 
 _getDataDays:
-    pattern:  /getData/days/{days}
+    path:  /getData/days/{days}
     defaults: { _controller: NetresearchTimeTrackerBundle:Default:getData, days: 3 }
     requirements:
         days:  \d{1,2}
 
 _getCustomers:
-    pattern:  /getCustomers
+    path:  /getCustomers
     defaults: { _controller: NetresearchTimeTrackerBundle:Default:getCustomers }
 
 _getAllCustomers:
-    pattern:  /getAllCustomers
+    path:  /getAllCustomers
     defaults: { _controller: NetresearchTimeTrackerBundle:Admin:getCustomers }
 
 _getCustomer:
-    pattern:  /getCustomer
+    path:  /getCustomer
     defaults: { _controller: NetresearchTimeTrackerBundle:Default:getCustomer }
 
 _getAllTeams:
-    pattern:  /getAllTeams
+    path:  /getAllTeams
     defaults: { _controller: NetresearchTimeTrackerBundle:Admin:getTeams }
 
 _getUsers:
-    pattern:  /getUsers
+    path:  /getUsers
     defaults: { _controller: NetresearchTimeTrackerBundle:Default:getUsers }
-    
+
 _getAllUsers:
-    pattern:  /getAllUsers
+    path:  /getAllUsers
     defaults: { _controller: NetresearchTimeTrackerBundle:Admin:getUsers }
-    
+
 _getProjects:
-    pattern:  /getProjects
+    path:  /getProjects
     defaults: { _controller: NetresearchTimeTrackerBundle:Default:getProjects }
-    
+
 _getAllProjects:
-    pattern:  /getAllProjects
+    path:  /getAllProjects
     defaults: { _controller: NetresearchTimeTrackerBundle:Default:getAllProjects }
 
 _getActivities:
-    pattern:  /getActivities
+    path:  /getActivities
     defaults: { _controller: NetresearchTimeTrackerBundle:Default:getActivities }
 
 _getTicketSystems:
-    pattern:  /getTicketSystems
+    path:  /getTicketSystems
     defaults: { _controller: NetresearchTimeTrackerBundle:Admin:getTicketSystems }
 
 _getHolidays:
-    pattern:  /getHolidays
+    path:  /getHolidays
     defaults: { _controller: NetresearchTimeTrackerBundle:Default:getHolidays }
 
 _getAllPresets:
-    pattern:  /getAllPresets
+    path:  /getAllPresets
     defaults: { _controller: NetresearchTimeTrackerBundle:Admin:getPresets }
 
 _login:
-    pattern:  /login
+    path:  /login
     defaults: { _controller: NetresearchTimeTrackerBundle:Default:login }
 
 _logout:
-    pattern:  /logout
+    path:  /logout
     defaults: { _controller: NetresearchTimeTrackerBundle:Default:logout }
 
 _export:
-    pattern: /export/{days}
+    path: /export/{days}
     defaults: { _controller: NetresearchTimeTrackerBundle:Default:export, days: 10000 }
     requirements:
         days: \d+
 
 _controllingExport:
-    pattern: /controlling/export/{userid}/{year}/{month}
+    path: /controlling/export/{userid}/{year}/{month}
     defaults: { _controller: NetresearchTimeTrackerBundle:Controlling:export, userid:0, year:0, month: 0 }
     requirements: { year: \d+, userid: \d+}
 
 check_status:
-    pattern: /status/check
+    path: /status/check
     defaults: { _controller: NetresearchTimeTrackerBundle:Status:check }
 
 check_page:
-    pattern: /status/page
+    path: /status/page
     defaults: { _controller: NetresearchTimeTrackerBundle:Status:page }
 
 saveProject:
-    pattern: /project/save
+    path: /project/save
     defaults: { _controller: NetresearchTimeTrackerBundle:Admin:saveProject }
 
 saveCustomer:
-    pattern: /customer/save
+    path: /customer/save
     defaults: { _controller: NetresearchTimeTrackerBundle:Admin:saveCustomer }
 
 saveUser:
-    pattern: /user/save
+    path: /user/save
     defaults: { _controller: NetresearchTimeTrackerBundle:Admin:saveUser }
 
 savePreset:
-    pattern: /preset/save
+    path: /preset/save
     defaults: { _controller: NetresearchTimeTrackerBundle:Admin:savePreset }
 
 saveTicketSystem:
-    pattern: /ticketsystem/save
+    path: /ticketsystem/save
     defaults: { _controller: NetresearchTimeTrackerBundle:Admin:saveTicketSystem }
 
 deletePreset:
-    pattern: /preset/delete
+    path: /preset/delete
     defaults: { _controller: NetresearchTimeTrackerBundle:Admin:deletePreset }
 
 saveSettings:
-    pattern: /settings/save
+    path: /settings/save
     defaults: { _controller: NetresearchTimeTrackerBundle:Settings:save }
 
 saveActivity:
-    pattern: /activity/save
+    path: /activity/save
     defaults: { _controller: NetresearchTimeTrackerBundle:Admin:saveActivity }
 
 saveTeam:
-    pattern: /team/save
+    path: /team/save
     defaults: { _controller: NetresearchTimeTrackerBundle:Admin:saveTeam }
 
 jira_login:
-    pattern: /connectjira/check
+    path: /connectjira/check
 
 avoidJiraConnection:
-    pattern: /avoidjiraconnection
+    path: /avoidjiraconnection
     defaults: { _controller: NetresearchTimeTrackerBundle:Default:avoidJiraConnection }
