change jira communication via oauth. Credentials are stored in ticket_systems database table
remove hwi/oauth-bundle and jira interaction

Conflicts:
	composer.json
	src/Netresearch/TimeTrackerBundle/Controller/AdminController.php
	src/Netresearch/TimeTrackerBundle/Controller/CrudController.php
	src/Netresearch/TimeTrackerBundle/Resources/public/js/netresearch/model/TicketSystem.js

--- a/src/Netresearch/TimeTrackerBundle/Resources/config/routing.yml
+++ b/src/Netresearch/TimeTrackerBundle/Resources/config/routing.yml
@@ -175,9 +175,6 @@ saveTeam:
     path: /team/save
     defaults: { _controller: NetresearchTimeTrackerBundle:Admin:saveTeam }
 
-jira_login:
-    path: /connectjira/check
-
-avoidJiraConnection:
-    path: /avoidjiraconnection
-    defaults: { _controller: NetresearchTimeTrackerBundle:Default:avoidJiraConnection }
+jiraOAuthCallback:
+    path: /jiraoauthcallback
+    defaults: { _controller: NetresearchTimeTrackerBundle:Default:jiraOAuthCallback }
