--- a/composer.json
+++ b/composer.json
@@ -29,8 +29,7 @@
         "incenteev/composer-parameter-handler": "~2.0",
         "jms/security-extra-bundle": "*",
         "jms/di-extra-bundle": "*",
-        "zendframework/zend-ldap": "*",
-        "ci/restclientbundle": "^2.0"
+        "zendframework/zend-ldap": "*"
     },
     "require-dev": {
         "sensio/generator-bundle": "~3.0",
