jira token request happens after saving an entry  Resolves: MGI-44
change jira - sync workflow

add jiraSyncEntriesAction in adminController to sync entries manually if the jira service was unavailable

moves jira interaction code to JiraOAuthApi.php
Conflicts:
	src/Netresearch/TimeTrackerBundle/Controller/AdminController.php
	src/Netresearch/TimeTrackerBundle/Controller/CrudController.php

--- a/src/Netresearch/TimeTrackerBundle/Resources/config/routing.yml
+++ b/src/Netresearch/TimeTrackerBundle/Resources/config/routing.yml
@@ -178,3 +178,7 @@ saveTeam:
 jiraOAuthCallback:
     path: /jiraoauthcallback
     defaults: { _controller: NetresearchTimeTrackerBundle:Default:jiraOAuthCallback }
+
+syncEntriesToJira:
+    path: /syncentries/jira
+    defaults: { _controller: NetresearchTimeTrackerBundle:Admin:jiraSyncEntries }
