--- a/.dockerignore
+++ b/.dockerignore
@@ -1,9 +1,9 @@
-/.idea
-/.buildpath
-/.project
-/.settings
-/app/config/parameters.yml
-/app/config/parameters.ini
+.idea
+.buildpath
+.project
+.settings
+app/config/parameters.yml
+app/config/parameters.ini
 /app/config/ldap_ou_team_mapping.yml
-/app/logs/*.log
-/app/cache/*
+app/cache/*
+app/logs/*.log
