Fix .dockerignore file; slashes at the beginning do not work
See https://github.com/docker/docker/issues/6521#issuecomment-280679852

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,12 +1,12 @@
-/.idea
-/.buildpath
-/.project
-/.settings
-/app/config/parameters.yml
-/app/logs/*.log
-/app/cache/*
-/app/build/
-/web/.htaccess
-/vendor/*
-/bin/*
-/web/bundles/*
+.idea
+.buildpath
+.project
+.settings
+app/build/
+app/config/parameters.yml
+app/cache/*
+app/logs/*.log
+bin/*
+vendor/*
+web/.htaccess
+web/bundles/*
