TTT-538: add vendor to .gitingore

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,13 @@
-.idea
-.buildpath
-.project
-.settings
-/app/config/parameters.ini
+/.idea
+/.buildpath
+/.project
+/.settings
+/app/config/parameters.yml
+/app/config/ldap_ou_team_mapping.yml
 /app/logs/*.log
 /app/cache/*
 /app/build/
-/.idea
+/web/.htaccess
+/vendor/*
+/bin/*
+/web/bundles/*
