--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
         "jms/di-extra-bundle": "1.1.*",
         "kriswallsmith/assetic": "1.1.*@dev",
         "jpastoor/jira-api-restclient": "2.0.*",
-        "zendframework/zend-ldap": "*"
+        "zendframework/zend-ldap": "*",
+        "phpoffice/phpspreadsheet": "^1.4"
     },
     "scripts": {
         "post-install-cmd": [
