--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,9 @@
     "config": {
         "bin-dir": "bin",
         "platform": {
-            "php": "7.2"
-        }
+            "php": "5.6"
+        },
+        "sort-packages": true
     },
     "autoload": {
         "psr-4": { "": "src/" },
@@ -15,15 +16,15 @@
     },
     "require": {
         "php": ">=5.3.9",
-        "symfony/symfony": "2.8",
-        "doctrine/orm": "^2.4.8",
+        "symfony/symfony": "2.8.*",
         "doctrine/doctrine-bundle": "~1.4",
-        "doctrine/doctrine-migrations-bundle": "^1.0",
-        "twig/extensions": "1.0.*@dev",
+        "doctrine/doctrine-migrations-bundle": "*",
+        "doctrine/orm": "^2.4.8",
+        "twig/extensions": "^1.0||^2.0",
         "symfony/assetic-bundle": "*",
-        "symfony/swiftmailer-bundle": "~2.3",
-        "symfony/monolog-bundle": "~2.4",
-        "sensio/distribution-bundle": "~5.0",
+        "symfony/swiftmailer-bundle": "~2.3,>=2.3.10",
+        "symfony/monolog-bundle": "^3.0.2",
+        "sensio/distribution-bundle": "~4.0",
         "sensio/framework-extra-bundle": "^3.0.2",
         "sensio/generator-bundle": "*",
         "incenteev/composer-parameter-handler": "~2.0",
@@ -37,7 +38,7 @@
         "symfony/phpunit-bridge": "~2.7"
     },
     "scripts": {
-        "post-install-cmd": [
+        "symfony-scripts": [
             "Incenteev\\ParameterHandler\\ScriptHandler::buildParameters",
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::buildBootstrap",
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::clearCache",
@@ -45,13 +46,11 @@
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installRequirementsFile",
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::prepareDeploymentTarget"
         ],
+        "post-install-cmd": [
+            "@symfony-scripts"
+        ],
         "post-update-cmd": [
-            "Incenteev\\ParameterHandler\\ScriptHandler::buildParameters",
-            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::buildBootstrap",
-            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::clearCache",
-            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installAssets",
-            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installRequirementsFile",
-            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::prepareDeploymentTarget"
+            "@symfony-scripts"
         ]
     },
     "extra": {
