--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "config": {
         "bin-dir": "bin",
         "platform": {
-            "php": "5.6"
+            "php": "7.2"
         },
         "sort-packages": true
     },
@@ -15,23 +15,30 @@
         "classmap": [ "app/AppKernel.php", "app/AppCache.php" ]
     },
     "require": {
-        "php": ">=5.3.9",
-        "symfony/symfony": "2.8.*",
+        "php": ">=7.2",
+        "ext-date": "*",
+        "ext-json": "*",
+        "ext-ldap": "*",
+        "ext-pcre": "*",
+        "ext-reflection": "*",
         "doctrine/doctrine-bundle": "~1.4",
         "doctrine/doctrine-migrations-bundle": "*",
         "doctrine/orm": "^2.4.8",
-        "twig/extensions": "1.0.*@dev",
-        "symfony/assetic-bundle": "*",
-        "symfony/swiftmailer-bundle": "~2.3,>=2.3.10",
-        "symfony/monolog-bundle": "^3.0.2",
+        "guzzlehttp/guzzle": "^6.3",
+        "guzzlehttp/oauth-subscriber": "^0.3.0",
+        "incenteev/composer-parameter-handler": "~2.0",
+        "jms/di-extra-bundle": "*",
+        "jms/security-extra-bundle": "*",
+        "phpoffice/phpspreadsheet": "^1.4",
         "sensio/distribution-bundle": "~4.0",
         "sensio/framework-extra-bundle": "^3.0.2",
         "sensio/generator-bundle": "*",
-        "incenteev/composer-parameter-handler": "~2.0",
-        "jms/security-extra-bundle": "*",
-        "jms/di-extra-bundle": "*",
-        "zendframework/zend-ldap": "*",
-        "phpoffice/phpspreadsheet": "^1.4"
+        "symfony/assetic-bundle": "*",
+        "symfony/monolog-bundle": "^3.0.2",
+        "symfony/swiftmailer-bundle": "~2.3,>=2.3.10",
+        "symfony/symfony": "2.8.*",
+        "twig/extensions": "1.0.*@dev",
+        "zendframework/zend-ldap": "*"
     },
     "require-dev": {
         "sensio/generator-bundle": "~3.0",
