--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -16,7 +16,7 @@ parameters:
     secret:            ThisTokenIsNotSoSecretChangeIt
 
     ldap_host:          "127.0.0.1"
-    ldap_port:          389
+    ldap_port:          636
     ldap_readuser:      "readuser"
     ldap_readpass:      "readuser"
     ldap_basedn:        "dc=company,dc=org"
@@ -27,4 +27,4 @@ parameters:
     app_logo_url:             "/bundles/netresearchtimetracker/images/logo.png"
     app_monthly_overview_url: "https://stats.timetracker.nr/?user="
     app_title:                "Netresearch TimeTracker"
-    app_header_url:           "https://www.netresearch.de/corpnav-intern/zeiterfassung/"
+    app_header_url:           "https://acme.org/corpnav/"
