--- a/composer.json
+++ b/composer.json
@@ -41,8 +41,9 @@
         "zendframework/zend-ldap": "*"
     },
     "require-dev": {
+        "phpunit/phpunit": "^7.4",
         "sensio/generator-bundle": "~3.0",
-        "symfony/phpunit-bridge": "~2.7"
+        "symfony/phpunit-bridge": "^4.1"
     },
     "scripts": {
         "symfony-scripts": [
