--- a/composer.json
+++ b/composer.json
@@ -21,29 +21,30 @@
         "ext-ldap": "*",
         "ext-pcre": "*",
         "ext-reflection": "*",
-        "doctrine/doctrine-bundle": "~1.4",
+        "doctrine/doctrine-bundle": "^1.6",
         "doctrine/doctrine-migrations-bundle": "*",
-        "doctrine/orm": "^2.4.8",
+        "doctrine/orm": "^2.5",
         "guzzlehttp/guzzle": "^6.3",
         "guzzlehttp/oauth-subscriber": "^0.3.0",
-        "incenteev/composer-parameter-handler": "~2.0",
+        "incenteev/composer-parameter-handler": "^2.0",
         "jms/di-extra-bundle": "*",
         "jms/security-extra-bundle": "*",
         "phpoffice/phpspreadsheet": "^1.4",
-        "sensio/distribution-bundle": "~4.0",
-        "sensio/framework-extra-bundle": "^3.0.2",
+        "sensio/distribution-bundle": "^5.0.19",
+        "sensio/framework-extra-bundle": "^5.0.0",
         "sensio/generator-bundle": "*",
         "symfony/assetic-bundle": "*",
-        "symfony/monolog-bundle": "^3.0.2",
-        "symfony/swiftmailer-bundle": "~2.3,>=2.3.10",
-        "symfony/symfony": "2.8.*",
+        "symfony/monolog-bundle": "^3.1.0",
+        "symfony/swiftmailer-bundle": "^2.6.4",
+        "symfony/symfony": "3.4.*",
+        "twig/twig": "^1.0||^2.0",
         "twig/extensions": "1.0.*@dev",
         "zendframework/zend-ldap": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "^7.4",
-        "sensio/generator-bundle": "~3.0",
-        "symfony/phpunit-bridge": "^4.1"
+        "sensio/generator-bundle": "^3.0",
+        "symfony/phpunit-bridge": "^3.0"
     },
     "scripts": {
         "symfony-scripts": [
@@ -63,13 +64,14 @@
     },
     "extra": {
         "symfony-app-dir": "app",
+        "symfony-bin-dir": "bin",
+        "symfony-var-dir": "var",
         "symfony-web-dir": "web",
-        "branch-alias": {
-            "dev-master": "2.8-dev"
-        },
+        "symfony-tests-dir": "tests",
         "incenteev-parameters": {
             "file": "app/config/parameters.yml",
             "dist-file": "app/config/parameters.yml.dist"
-        }
+        },
+        "branch-alias": null
     }
 }
