--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -16,12 +16,19 @@ parameters:
     secret:            ThisTokenIsNotSoSecretChangeIt
 
     ldap_host:          "127.0.0.1"
-    ldap_port:          636
+    # LDAP port: 0 use default ports; 336 non SSL; 636 SSL
+    ldap_port:          0
     ldap_readuser:      "readuser"
     ldap_readpass:      "readuser"
     ldap_basedn:        "dc=company,dc=org"
+    # use sAMAccountName for AD
     ldap_usernamefield: uid
+    # use SSL: old, deprecated, mehtod for encrypted connection
     ldap_usessl:        true
+    # startTLS: new method for encrypted connections - not implemented yet
+    #ldap_starttls       true
+    # whether to create users in TimeTracker after successfully authenticated by LDAP but not existing in TimeTracker
+    # also see ldap_ou_team_mapping.yml.dist
     ldap_create_user:   true
 
     app_logo_url:             "/bundles/netresearchtimetracker/images/logo.png"
