--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -15,4 +15,4 @@ services:
       - ./app/cache:/var/www/html/app/cache
       - ./app/logs:/var/www/html/app/logs
       - ./app/config/parameters.yml:/var/www/html/app/config/parameters.yml
-
+      - /usr/local/share/ca-certificates/:/usr/local/share/ca-certificates/host
