Implement #28: Make trusted proxies configurable
Add some check to the app controler for supporting symfony beeing behind a proxy, introduced ENV variables TRUSTED_PROXY_ALL and TRUSTED_PROXY_LIST for configurable behavior - solve problem with empty entry list due to untrusted proxy requests

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,10 @@ services:
     links:
       - db:db
     restart: always
+    environment:
+      - TRUSTED_PROXY_ALL
+      - TRUSTED_PROXY_LIST
+
 
   httpd:
     image: nginx:alpine
