TIM-37: Script and API to show ticket times in Jira cloud

--- a/src/Netresearch/TimeTrackerBundle/Resources/config/routing.yml
+++ b/src/Netresearch/TimeTrackerBundle/Resources/config/routing.yml
@@ -116,6 +116,13 @@ _getContracts:
     path:  /getContracts
     defaults: { _controller: NetresearchTimeTrackerBundle:Admin:getContracts }
 
+_getTicketTimeSummary:
+    path: /getTicketTimeSummary/{ticket}
+    defaults: { _controller: NetresearchTimeTrackerBundle:Default:getTicketTimeSummary, ticket: null }
+
+_getTicketTimeSummaryJs:
+    path: /scripts/timeSummaryForJira
+    defaults: { _controller: NetresearchTimeTrackerBundle:Default:getTicketTimeSummaryJs }
 
 _login:
     path:  /login
