TIM-18: Add optional "billable" field to monthly .xlsx export

--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -35,3 +35,5 @@ parameters:
     app_monthly_overview_url: "https://stats.timetracker.nr/?user="
     app_title:                "Netresearch TimeTracker"
     app_header_url:           "https://acme.org/corpnav/"
+
+    app_show_billable_field_in_export: false
