--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -5,3 +5,6 @@ controllers:
 kernel:
     resource: ../src/Kernel.php
     type: annotation
+
+#_timetracker:
+#    resource: "@App/Resources/config/routing.yml"
