fix default header and logo values

--- a/.env
+++ b/.env
@@ -33,10 +33,10 @@ ldap_usessl=true
 # also see ldap_ou_team_mapping.yml.dist
 ldap_create_user=true
 
-APP_LOGO_URL="/bundles/netresearchtimetracker/images/logo.png"
+APP_LOGO_URL="images/logo.png"
 APP_MONTHLY_OVERVIEW_URL="https://stats.timetracker.nr/?user="
 APP_TITLE="Netresearch TimeTracker"
-APP_HEADER_URL="https://acme.org/corpnav/"
+APP_HEADER_URL=""
 
 APP_SHOW_BILLABLE_FIELD_IN_EXPORT=false
 
@@ -51,7 +51,7 @@ APP_SECRET=ca347f9e9be41d6439cb31f4f8e4159f
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
-DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&charset=utf8"
+DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:19138/app?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/mailer ###
