--- a/.env
+++ b/.env
@@ -15,23 +15,20 @@
 
 locale=en
 
-secret=ThisTokenIsNotSoSecretChangeIt
+LDAP_HOST="ldap.acme.org"
+LDAP_PORT=636 # 636, 389
+LDAP_ENCRYPTION=ssl # ssl, tls, none
 
-ldap_host="127.0.0.1"
-# LDAP port: 0 use default ports; 336 non SSL; 636 SSL
-ldap_port=0
-ldap_readuser="readuser"
-ldap_readpass="readuser"
-ldap_basedn="dc=company,dc=org"
-# use sAMAccountName for AD
-ldap_usernamefield=uid
-# use SSL: old, deprecated, mehtod for encrypted connection
-ldap_usessl=true
-# startTLS: new method for encrypted connections - not implemented yet
-#ldap_starttls=true
+LDAP_BASE_DN="DC=ACME,DC=ORG"
+LDAP_SEARCH_DN="cn=readuser,DC=ACME,DC=ORG"
+LDAP_SEARCH_PASSWORD="readuser"
+LDAP_UID_KEY="sAMAccountName"
+LDAP_FILTER="({uid_key}={username})"
+LDAP_DN_STRING="acme\{username}"
+
 # whether to create users in TimeTracker after successfully authenticated by LDAP but not existing in TimeTracker
 # also see ldap_ou_team_mapping.yml.dist
-ldap_create_user=true
+LDAP_CREATE_USER=true
 
 APP_LOGO_URL="images/logo.png"
 APP_MONTHLY_OVERVIEW_URL="https://stats.timetracker.nr/?user="
@@ -50,8 +47,7 @@ APP_SECRET=ca347f9e9be41d6439cb31f4f8e4159f
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-# DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
-DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:19138/app?serverVersion=13&charset=utf8"
+DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/mailer ###
