--- a/composer.json
+++ b/composer.json
@@ -27,10 +27,12 @@
         "symfony/framework-bundle": "6.0.*",
         "symfony/http-client": "6.0.*",
         "symfony/intl": "6.0.*",
+        "symfony/ldap": "6.0.*",
         "symfony/mailer": "6.0.*",
         "symfony/mime": "6.0.*",
         "symfony/monolog-bundle": "^3.1",
         "symfony/notifier": "6.0.*",
+        "symfony/password-hasher": "6.0.*",
         "symfony/process": "6.0.*",
         "symfony/property-access": "6.0.*",
         "symfony/property-info": "6.0.*",
@@ -48,6 +50,7 @@
         "twig/twig": "^2.12|^3.0"
     },
     "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "^3.4",
         "phpunit/phpunit": "^9.5",
         "rector/rector": "^0.12.10",
         "symfony/browser-kit": "6.0.*",
