polish login handling: ensure (LDAP) user is persisted/updated in local database; unify env/config variable handling

--- a/.env
+++ b/.env
@@ -24,8 +24,10 @@ LDAP_SEARCH_DN="cn=readuser,DC=ACME,DC=ORG"
 LDAP_SEARCH_PASSWORD="readuser"
 LDAP_UID_KEY="sAMAccountName"
 LDAP_FILTER="({uid_key}={username})"
-LDAP_DN_STRING="acme\{username}"
+LDAP_DN_STRING="acme\\{username}"
 
+
+LDAP_DEFAULT_ROLE='ROLE_DEV'
 # whether to create users in TimeTracker after successfully authenticated by LDAP but not existing in TimeTracker
 # also see ldap_ou_team_mapping.yml.dist
 LDAP_CREATE_USER=true
@@ -36,6 +38,9 @@ APP_TITLE="Netresearch TimeTracker"
 APP_HEADER_URL=""
 
 APP_SHOW_BILLABLE_FIELD_IN_EXPORT=false
+
+# CSV list of user who will always get ROLE_ADMIN applied
+APP_ADMIN_USERS=''
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
