Updating recipe for symfony/mailer

--- a/.env
+++ b/.env
@@ -58,5 +58,5 @@ DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=14&ch
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=smtp://localhost
+# MAILER_DSN=null://null
 ###< symfony/mailer ###
