--- a/composer.json
+++ b/composer.json
@@ -54,6 +54,7 @@
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.4",
+        "hautelook/alice-bundle": "^2.11",
         "phpunit/phpunit": "^9.5",
         "rector/rector": "^0.12.10",
         "symfony/browser-kit": "6.1.*",
