--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     build: .
     image: ghcr.io/netresearch/timetracker:v4
     volumes:
+      - app-pub:/var/www/html/web
       - app-cache:/var/www/html/app/cache
       - app-logs:/var/www/html/app/logs
       - type: bind
@@ -21,7 +22,7 @@ services:
   httpd:
     image: nginx:alpine
     volumes:
-      - ./web:/var/www/html/web
+      - app-pub:/var/www/html/web
       - ./nginx-conf.d-default.conf:/etc/nginx/conf.d/default.conf
     links:
       - app:phpfpm
@@ -44,6 +45,9 @@ networks:
     driver: "bridge"
 
 volumes:
+
+  app-pub:
+    driver: local
 
   app-cache:
     driver: local
